fix: solve title text clipping

--- a/frontend/src/components/EntryCard/EntryCard.module.css
+++ b/frontend/src/components/EntryCard/EntryCard.module.css
@@ -52,6 +52,8 @@
     position: relative;
     overflow: hidden;
     white-space: nowrap;
+    /*debug*/
+    padding: 2px;
 }
 
 .titleFade {
@@ -69,6 +71,7 @@
     color: var(--color-text-secondary);
     margin-top: 4px;
     user-select: none;
+    margin-bottom: 7px;
 }
 
 .rating {
